--- a/apps/bird-cam-api/project.json
+++ b/apps/bird-cam-api/project.json
@@ -6,14 +6,18 @@
   "targets": {
     "build": {
       "executor": "@nrwl/webpack:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "target": "node",
         "compiler": "tsc",
         "outputPath": "dist/apps/bird-cam-api",
         "main": "apps/bird-cam-api/src/main.ts",
         "tsConfig": "apps/bird-cam-api/tsconfig.app.json",
-        "assets": ["apps/bird-cam-api/src/assets"],
+        "assets": [
+          "apps/bird-cam-api/src/assets"
+        ],
         "webpackConfig": "apps/bird-cam-api/webpack.config.js"
       },
       "configurations": {
@@ -37,14 +41,20 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/bird-cam-api/**/*.ts"]
+        "lintFilePatterns": [
+          "apps/bird-cam-api/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/bird-cam-api/jest.config.ts",
         "passWithNoTests": true
