--- a/apps/bird-cam-ui-e2e/project.json
+++ b/apps/bird-cam-ui-e2e/project.json
@@ -19,12 +19,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/bird-cam-ui-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/bird-cam-ui-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["bird-cam-ui"]
+  "implicitDependencies": [
+    "bird-cam-ui"
+  ]
 }
