--- a/apps/bird-cam-ui/project.json
+++ b/apps/bird-cam-ui/project.json
@@ -7,12 +7,16 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/bird-cam-ui",
         "index": "apps/bird-cam-ui/src/index.html",
         "main": "apps/bird-cam-ui/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/bird-cam-ui/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
@@ -21,7 +25,8 @@
             "glob": "**/*.svg",
             "input": "node_modules/ionicons/dist/ionicons/svg",
             "output": "./svg"
-          }
+          },
+          "apps/bird-cam-ui/src/manifest.webmanifest"
         ],
         "styles": [
           "apps/bird-cam-ui/src/styles.scss",
@@ -29,7 +34,9 @@
             "input": "apps/bird-cam-ui/src/theme/variables.scss"
           }
         ],
-        "scripts": []
+        "scripts": [],
+        "serviceWorker": true,
+        "ngswConfigPath": "apps/bird-cam-ui/ngsw-config.json"
       },
       "configurations": {
         "production": {
@@ -78,7 +85,9 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/bird-cam-ui/**/*.ts",
@@ -88,7 +97,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/bird-cam-ui/jest.config.ts",
         "passWithNoTests": true
