--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser": "~15.1.0",
     "@angular/platform-browser-dynamic": "~15.1.0",
     "@angular/router": "~15.1.0",
+    "@angular/service-worker": "~15.1.0",
     "@capacitor/core": "^3.6.0",
     "@ionic/angular": "^6.1.4",
     "@nestjs/common": "^9.0.0",
@@ -34,6 +35,7 @@
     "@angular/cli": "~15.1.0",
     "@angular/compiler-cli": "~15.1.0",
     "@angular/language-service": "~15.1.0",
+    "@angular/pwa": "^15.1.6",
     "@capacitor/android": "^3.6.0",
     "@capacitor/cli": "^3.6.0",
     "@capacitor/ios": "^3.6.0",
