--- a/apps/bird-cam-ui/project.json
+++ b/apps/bird-cam-ui/project.json
@@ -26,7 +26,12 @@
             "input": "node_modules/ionicons/dist/ionicons/svg",
             "output": "./svg"
           },
-          "apps/bird-cam-ui/src/manifest.webmanifest"
+          "apps/bird-cam-ui/src/manifest.webmanifest",
+          {
+            "glob": "**/*.json",
+            "input": "./libs/comments/src/lib/assets/i18n/",
+            "output": "/assets/i18n/comments"
+          }
         ],
         "styles": [
           "apps/bird-cam-ui/src/styles.scss",
@@ -72,7 +77,8 @@
           "browserTarget": "bird-cam-ui:build:production"
         },
         "development": {
-          "browserTarget": "bird-cam-ui:build:development"
+          "browserTarget": "bird-cam-ui:build:development",
+          "proxyConfig": "apps/bird-cam-ui/proxy.conf.json"
         }
       },
       "defaultConfiguration": "development"
