--- a/package.json
+++ b/package.json
@@ -16,13 +16,27 @@
     "@angular/service-worker": "~15.1.0",
     "@capacitor/core": "^3.6.0",
     "@ionic/angular": "^6.1.4",
+    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
-    "axios": "^1.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@types/nodemailer": "^6.4.7",
+    "@types/rpi-gpio": "^2.1.1",
+    "axios": "^1.3.4",
+    "form-data": "^4.0.0",
+    "mysql": "^2.18.1",
+    "ngx-translate-messageformat-compiler": "^6.2.0",
+    "ngx-translate-multi-http-loader": "^9.3.1",
+    "nodemailer": "^6.9.1",
+    "onoff": "^6.0.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.0.0",
-    "tslib": "^2.3.0",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.5.0",
+    "typeorm": "^0.3.12",
+    "winston": "^3.8.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -53,6 +67,7 @@
     "@nxext/ionic-angular": "^15.6.0",
     "@schematics/angular": "~15.1.0",
     "@types/jest": "28.1.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
