--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "rxjs": "~7.5.0",
     "tslib": "^2.5.0",
     "typeorm": "^0.3.12",
+    "webrtc-adapter": "^8.2.1",
     "winston": "^3.8.2",
     "zone.js": "~0.11.4"
   },
