--- a/package.json
+++ b/package.json
@@ -16,16 +16,23 @@
     "@angular/service-worker": "~15.1.0",
     "@capacitor/core": "^3.6.0",
     "@ionic/angular": "^6.1.4",
+    "@messageformat/core": "^3.0.1",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@ngrx/component-store": "~15.0.0",
+    "@ngrx/effects": "~15.0.0",
+    "@ngrx/entity": "~15.0.0",
+    "@ngrx/router-store": "~15.0.0",
+    "@ngrx/store": "~15.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
     "axios": "^1.3.4",
+    "deepmerge-ts": "^4.3.0",
     "form-data": "^4.0.0",
     "mysql": "^2.18.1",
     "ngx-translate-messageformat-compiler": "^6.2.0",
@@ -56,10 +63,12 @@
     "@capacitor/ios": "^3.6.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@ngrx/schematics": "~15.0.0",
+    "@ngrx/store-devtools": "~15.0.0",
     "@nrwl/angular": "15.6.3",
     "@nrwl/cypress": "15.7.1",
     "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "15.7.1",
+    "@nrwl/jest": "^15.6.3",
     "@nrwl/linter": "15.6.3",
     "@nrwl/nest": "15.6.3",
     "@nrwl/node": "15.6.3",
@@ -76,6 +85,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
