--- a/libs/live-stream/infrastructure/tsconfig.spec.json
+++ b/libs/live-stream/infrastructure/tsconfig.spec.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "../../../dist/out-tsc",
     "module": "commonjs",
     "types": ["jest", "node"]
   },
@@ -11,5 +11,5 @@
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
-, "infrastructure/src/lib/live-stream.service.spec.ts"  ]
+  ]
 }
