--- a/libs/live-stream/ui/tsconfig.lib.json
+++ b/libs/live-stream/ui/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/out-tsc",
+    "outDir": "../../../dist/out-tsc",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
@@ -13,5 +13,5 @@
     "jest.config.ts",
     "src/**/*.test.ts"
   ],
-  "include": ["src/**/*.ts", "infrastructure/src/lib/live-stream.service.spec.ts"]
+  "include": ["src/**/*.ts"]
 }
