--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,11 @@
       ],
       "@bird-cam/comments/model": ["libs/comments/model/src/index.ts"],
       "@bird-cam/comments/ui": ["libs/comments/ui/src/index.ts"],
-      "@bird-cam/live-stream": ["libs/live-stream/src/index.ts"]
+      "@bird-cam/live-stream/infrastructure": [
+        "libs/live-stream/infrastructure/src/index.ts"
+      ],
+      "@bird-cam/live-stream/model": ["libs/live-stream/model/src/index.ts"],
+      "@bird-cam/live-stream/ui": ["libs/live-stream/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
