--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
     "axios": "^1.3.4",
+    "bytes": "^3.1.2",
     "deepmerge-ts": "^4.3.0",
     "form-data": "^4.0.0",
     "mysql": "^2.18.1",
