--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@angular/router": "~15.1.0",
     "@angular/service-worker": "~15.1.0",
     "@capacitor/core": "^3.6.0",
-    "@ionic/angular": "^6.1.4",
+    "@ionic/angular": "6.1.4",
     "@messageformat/core": "^3.0.1",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@ngneat/transloco": "^4.2.6",
     "@ngrx/component-store": "~15.0.0",
     "@ngrx/effects": "~15.0.0",
     "@ngrx/entity": "~15.0.0",
@@ -49,7 +50,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.0",
+    "@angular-devkit/build-angular": "15.1.0",
     "@angular-devkit/core": "~15.1.0",
     "@angular-devkit/schematics": "~15.1.0",
     "@angular-eslint/eslint-plugin": "~15.0.0",
@@ -75,7 +76,7 @@
     "@nrwl/node": "15.6.3",
     "@nrwl/webpack": "15.6.3",
     "@nrwl/workspace": "15.6.3",
-    "@nxext/ionic-angular": "^15.6.0",
+    "@nxext/ionic-angular": "15.6.0",
     "@schematics/angular": "~15.1.0",
     "@types/jest": "28.1.1",
     "@types/multer": "^1.4.7",
