--- a/apps/bird-cam-api/docker/Dockerfile
+++ b/apps/bird-cam-api/docker/Dockerfile
@@ -1,11 +1,13 @@
-FROM node:latest
+FROM node:18.15.0-alpine3.17
 ENV NODE_ENV=production
 
 WORKDIR /home
 
 COPY package*.json ./
+RUN npm install
+ENV PATH /home/node_modules/.bin:$PATH
 
-RUN npm ci --only=production
+WORKDIR /home/app
 
 CMD [ "node", "main.js" ]
 
