--- a/nx.json
+++ b/nx.json
@@ -5,6 +5,7 @@
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
+        "useDaemonProcess": false,
         "cacheableOperations": [
           "build",
           "lint",
