create lib for logger

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,8 @@
         "libs/live-stream/infrastructure/src/index.ts"
       ],
       "@bird-cam/live-stream/model": ["libs/live-stream/model/src/index.ts"],
-      "@bird-cam/live-stream/ui": ["libs/live-stream/ui/src/index.ts"]
+      "@bird-cam/live-stream/ui": ["libs/live-stream/ui/src/index.ts"],
+      "@bird-cam/logger": ["libs/logger/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
