--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/entity": "~15.0.0",
     "@ngrx/router-store": "~15.0.0",
     "@ngrx/store": "~15.0.0",
+    "@nrwl/js": "^15.6.3",
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
     "axios": "^1.3.4",
@@ -70,7 +71,7 @@
     "@nrwl/jest": "^15.6.3",
     "@nrwl/linter": "15.6.3",
     "@nrwl/nest": "15.6.3",
-    "@nrwl/node": "15.6.3",
+    "@nrwl/node": "^15.6.3",
     "@nrwl/webpack": "15.6.3",
     "@nrwl/workspace": "15.6.3",
     "@nxext/ionic-angular": "15.6.0",
