--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "axios": "^1.3.4",
     "deepmerge-ts": "^4.3.0",
     "form-data": "^4.0.0",
+    "janode": "^1.6.7",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
