--- a/apps/bird-cam-api-e2e/project.json
+++ b/apps/bird-cam-api-e2e/project.json
@@ -1,29 +1,21 @@
 {
   "name": "bird-cam-api-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "implicitDependencies": [
-    "bird-cam-api"
-  ],
+  "implicitDependencies": ["bird-cam-api"],
   "targets": {
     "e2e": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{e2eProjectRoot}"
-      ],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
         "jestConfig": "apps/bird-cam-api-e2e/jest.config.ts",
         "passWithNoTests": true
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/bird-cam-api-e2e/**/*.{js,ts}"
-        ]
+        "lintFilePatterns": ["apps/bird-cam-api-e2e/**/*.{js,ts}"]
       }
     }
   }
