--- a/apps/bird-cam-api/project.json
+++ b/apps/bird-cam-api/project.json
@@ -5,10 +5,8 @@
   "projectType": "application",
   "targets": {
     "build": {
-      "executor": "@nrwl/webpack:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "executor": "@nx/webpack:webpack",
+      "outputs": ["{options.outputPath}"],
       "options": {
         "target": "node",
         "compiler": "tsc",
@@ -16,11 +14,20 @@
         "main": "apps/bird-cam-api/src/main.ts",
         "tsConfig": "apps/bird-cam-api/tsconfig.app.json",
         "assets": [
-          { "glob": "**/*", "input": "apps/bird-cam-api/docker", "output": "./" },
-          { "glob": ".env", "input": "apps/bird-cam-api", "output": "./" }
+          {
+            "glob": "**/*",
+            "input": "apps/bird-cam-api/docker",
+            "output": "./"
+          },
+          {
+            "glob": ".env",
+            "input": "apps/bird-cam-api",
+            "output": "./"
+          }
         ],
         "webpackConfig": "apps/bird-cam-api/webpack.config.js",
-        "generatePackageJson": true
+        "generatePackageJson": true,
+        "babelUpwardRootMode": true
       },
       "configurations": {
         "production": {
@@ -31,7 +38,7 @@
       }
     },
     "serve": {
-      "executor": "@nrwl/js:node",
+      "executor": "@nx/js:node",
       "options": {
         "buildTarget": "bird-cam-api:build"
       },
@@ -42,21 +49,15 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/bird-cam-api/**/*.ts"
-        ]
+        "lintFilePatterns": ["apps/bird-cam-api/**/*.ts"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/bird-cam-api/jest.config.ts",
         "passWithNoTests": true
