--- a/package.json
+++ b/package.json
@@ -5,32 +5,31 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~15.1.0",
-    "@angular/common": "~15.1.0",
-    "@angular/compiler": "~15.1.0",
-    "@angular/core": "~15.1.0",
-    "@angular/forms": "~15.1.0",
-    "@angular/platform-browser": "~15.1.0",
-    "@angular/platform-browser-dynamic": "~15.1.0",
-    "@angular/router": "~15.1.0",
-    "@angular/service-worker": "~15.1.0",
+    "@angular/animations": "16.1.8",
+    "@angular/common": "16.1.8",
+    "@angular/compiler": "16.1.8",
+    "@angular/core": "16.1.8",
+    "@angular/forms": "16.1.8",
+    "@angular/platform-browser": "16.1.8",
+    "@angular/platform-browser-dynamic": "16.1.8",
+    "@angular/router": "16.1.8",
+    "@angular/service-worker": "16.1.8",
     "@capacitor/core": "^3.6.0",
     "@ionic/angular": "6.6.1",
     "@messageformat/core": "^3.0.1",
     "@nestjs/axios": "^2.0.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "10.0.2",
     "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/core": "10.0.2",
+    "@nestjs/platform-express": "10.0.2",
     "@nestjs/typeorm": "^9.0.1",
     "@ngneat/transloco": "^4.2.6",
     "@ngneat/transloco-messageformat": "^4.1.0",
-    "@ngrx/component-store": "~15.0.0",
-    "@ngrx/effects": "~15.0.0",
-    "@ngrx/entity": "~15.0.0",
-    "@ngrx/router-store": "~15.0.0",
-    "@ngrx/store": "~15.0.0",
-    "@nrwl/js": "^15.6.3",
+    "@ngrx/component-store": "16.0.1",
+    "@ngrx/effects": "16.0.1",
+    "@ngrx/entity": "16.0.1",
+    "@ngrx/router-store": "16.0.1",
+    "@ngrx/store": "16.0.1",
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
     "axios": "^1.3.4",
@@ -41,62 +40,63 @@
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.5.0",
+    "rxjs": "7.8.1",
     "tslib": "^2.5.0",
     "typeorm": "^0.3.12",
     "webrtc-adapter": "^8.2.1",
     "winston": "^3.8.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.13.1",
+    "@nx/js": "16.6.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.1.6",
-    "@angular-devkit/core": "~15.1.0",
-    "@angular-devkit/schematics": "~15.1.0",
-    "@angular-eslint/eslint-plugin": "~15.0.0",
-    "@angular-eslint/eslint-plugin-template": "~15.0.0",
-    "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.1.0",
-    "@angular/compiler-cli": "~15.1.0",
-    "@angular/language-service": "~15.1.0",
+    "@angular-devkit/build-angular": "16.1.7",
+    "@angular-devkit/core": "16.1.7",
+    "@angular-devkit/schematics": "16.1.7",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "16.1.8",
+    "@angular/language-service": "16.1.8",
     "@angular/pwa": "^15.1.6",
     "@capacitor/android": "^3.6.0",
     "@capacitor/cli": "^3.6.0",
     "@capacitor/ios": "^3.6.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.4.0",
-    "@ngrx/schematics": "~15.1.0",
-    "@ngrx/store-devtools": "~15.0.0",
-    "@nrwl/angular": "15.6.3",
-    "@nrwl/cypress": "15.7.1",
-    "@nrwl/eslint-plugin-nx": "15.6.3",
-    "@nrwl/jest": "^15.6.3",
-    "@nrwl/linter": "15.6.3",
-    "@nrwl/nest": "15.6.3",
-    "@nrwl/node": "^15.6.3",
-    "@nrwl/webpack": "15.6.3",
-    "@nrwl/workspace": "15.6.3",
+    "@nestjs/schematics": "10.0.1",
+    "@nestjs/testing": "10.0.2",
+    "@ngrx/schematics": "16.0.1",
+    "@ngrx/store-devtools": "16.0.1",
     "@nxext/ionic-angular": "15.6.0",
-    "@schematics/angular": "~15.1.0",
-    "@types/jest": "28.1.1",
+    "@schematics/angular": "16.1.7",
+    "@types/jest": "29.4.4",
     "@types/multer": "^1.4.7",
     "@types/node": "18.7.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
     "autoprefixer": "^10.4.0",
-    "cypress": "^12.2.0",
+    "cypress": "12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jasmine-marbles": "~0.9.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
-    "jest-preset-angular": "~12.2.3",
-    "nx": "15.6.3",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
+    "jest-preset-angular": "13.1.1",
+    "nx": "16.6.0",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "5.1.6",
+    "@nx/workspace": "16.6.0",
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/linter": "16.6.0",
+    "@nx/cypress": "16.6.0",
+    "@nx/jest": "16.6.0",
+    "@nx/node": "16.6.0",
+    "@nx/nest": "16.6.0",
+    "@nx/angular": "16.6.0",
+    "@nx/webpack": "16.6.0"
   }
 }
