--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@ngrx/entity": "16.0.1",
     "@ngrx/router-store": "16.0.1",
     "@ngrx/store": "16.0.1",
+    "@nx/js": "16.6.0",
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
     "axios": "^1.3.4",
     "deepmerge-ts": "^4.3.0",
     "form-data": "^4.0.0",
-    "janode": "^1.6.7",
+    "janode": "^1.5.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
@@ -45,8 +46,7 @@
     "typeorm": "^0.3.12",
     "webrtc-adapter": "^8.2.1",
     "winston": "^3.8.2",
-    "zone.js": "0.13.1",
-    "@nx/js": "16.6.0"
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.1.7",
@@ -66,6 +66,15 @@
     "@nestjs/testing": "10.0.2",
     "@ngrx/schematics": "16.0.1",
     "@ngrx/store-devtools": "16.0.1",
+    "@nx/angular": "16.6.0",
+    "@nx/cypress": "16.6.0",
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/jest": "16.6.0",
+    "@nx/linter": "16.6.0",
+    "@nx/nest": "16.6.0",
+    "@nx/node": "16.6.0",
+    "@nx/webpack": "16.6.0",
+    "@nx/workspace": "16.6.0",
     "@nxext/ionic-angular": "15.6.0",
     "@schematics/angular": "16.1.7",
     "@types/jest": "29.4.4",
@@ -88,15 +97,6 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6",
-    "@nx/workspace": "16.6.0",
-    "@nx/eslint-plugin": "16.6.0",
-    "@nx/linter": "16.6.0",
-    "@nx/cypress": "16.6.0",
-    "@nx/jest": "16.6.0",
-    "@nx/node": "16.6.0",
-    "@nx/nest": "16.6.0",
-    "@nx/angular": "16.6.0",
-    "@nx/webpack": "16.6.0"
+    "typescript": "5.1.6"
   }
 }
