--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
     "axios": "^1.3.4",
+    "backoff-rxjs": "^7.0.0",
     "deepmerge-ts": "^4.3.0",
     "form-data": "^4.0.0",
     "janode": "^1.5.2",
