--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "10.0.2",
     "@nestjs/platform-express": "10.0.2",
+    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@ngneat/transloco": "^4.2.6",
-    "@ngneat/transloco-messageformat": "^4.1.0",
+    "@nestjs/websockets": "^10.3.3",
+    "@ngneat/transloco": "^6.0.4",
+    "@ngneat/transloco-messageformat": "^5.0.0",
     "@ngrx/component-store": "16.0.1",
     "@ngrx/effects": "16.0.1",
     "@ngrx/entity": "16.0.1",
@@ -43,6 +45,7 @@
     "onoff": "^6.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.8.1",
+    "socket.io-client": "^4.7.4",
     "tslib": "^2.5.0",
     "typeorm": "^0.3.12",
     "webrtc-adapter": "^8.2.1",
@@ -91,6 +94,7 @@
     "jasmine-marbles": "~0.9.1",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "13.1.1",
     "nx": "16.6.0",
     "postcss": "^8.4.5",
