--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "socket.io-client": "^4.7.4",
     "tslib": "^2.5.0",
     "typeorm": "^0.3.12",
+    "web-push": "^3.6.7",
     "webrtc-adapter": "^8.2.1",
     "winston": "^3.8.2",
     "zone.js": "0.13.1"
