--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nx/js": "16.6.0",
     "@types/nodemailer": "^6.4.7",
     "@types/rpi-gpio": "^2.1.1",
+    "@types/web-push": "^3.6.3",
     "axios": "^1.3.4",
     "backoff-rxjs": "^7.0.0",
     "deepmerge-ts": "^4.3.0",
@@ -63,7 +64,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "16.1.8",
     "@angular/language-service": "16.1.8",
-    "@angular/pwa": "^15.1.6",
+    "@angular/pwa": "^16.2.12",
     "@capacitor/android": "^3.6.0",
     "@capacitor/cli": "^3.6.0",
     "@capacitor/ios": "^3.6.0",
@@ -80,7 +81,7 @@
     "@nx/node": "16.6.0",
     "@nx/webpack": "16.6.0",
     "@nx/workspace": "16.6.0",
-    "@nxext/ionic-angular": "15.6.0",
+    "@nxext/ionic-angular": "^16.2.0",
     "@schematics/angular": "16.1.7",
     "@types/jest": "29.4.4",
     "@types/multer": "^1.4.7",
