--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^1.3.4",
     "backoff-rxjs": "^7.0.0",
     "deepmerge-ts": "^4.3.0",
+    "fast-average-color-node": "^2.7.0",
     "form-data": "^4.0.0",
     "janode": "^1.5.2",
     "mysql": "^2.18.1",
