--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "form-data": "^4.0.0",
     "janode": "^1.5.2",
     "mysql": "^2.18.1",
+    "nestjs-paginate": "^8.6.2",
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
     "reflect-metadata": "^0.1.13",
@@ -53,6 +54,7 @@
     "web-push": "^3.6.7",
     "webrtc-adapter": "^8.2.1",
     "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^5.0.0",
     "zone.js": "0.13.1"
   },
   "devDependencies": {
