--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ngrx/store": "16.0.1",
     "@nx/js": "16.6.0",
     "@types/nodemailer": "^6.4.7",
+    "@types/pixelmatch": "^5.2.6",
     "@types/rpi-gpio": "^2.1.1",
     "@types/web-push": "^3.6.3",
     "axios": "^1.3.4",
@@ -46,8 +47,10 @@
     "nestjs-paginate": "^8.6.2",
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
+    "pixelmatch": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.8.1",
+    "sharp": "^0.32.6",
     "socket.io-client": "^4.7.4",
     "tslib": "^2.5.0",
     "typeorm": "^0.3.12",
