--- a/apps/bird-cam-ui/project.json
+++ b/apps/bird-cam-ui/project.json
@@ -32,6 +32,11 @@
             "glob": "**/*.json",
             "input": "./libs/active-viewers/ui/src/assets/i18n/",
             "output": "/assets/i18n/active-viewers"
+          },
+          {
+            "glob": "**/*.json",
+            "input": "./libs/motion-activity/ui/src/assets/i18n/",
+            "output": "/assets/i18n/motion-activity"
           }
         ],
         "styles": [
