--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@types/web-push": "^3.6.3",
     "axios": "^1.3.4",
     "backoff-rxjs": "^7.0.0",
+    "chart.js": "^4.4.2",
     "deepmerge-ts": "^4.3.0",
     "fast-average-color-node": "^2.7.0",
     "form-data": "^4.0.0",
     "janode": "^1.5.2",
     "mysql": "^2.18.1",
     "nestjs-paginate": "^8.6.2",
+    "ng2-charts": "^6.0.0",
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
     "pixelmatch": "^5.3.0",
