--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
     "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.8.1",
     "sharp": "^0.32.6",
