--- a/apps/bird-cam-observer/docker/mediamtx.yml
+++ b/apps/bird-cam-observer/docker/mediamtx.yml
@@ -9,7 +9,7 @@
 # Verbosity of the program; available values are "error", "warn", "info", "debug".
 logLevel: info
 # Destinations of log messages; available values are "stdout", "file" and "syslog".
-logDestinations: [file]
+logDestinations: [stdout]
 # If "file" is in logDestinations, this is the file which will receive the logs.
 logFile: mediamtx.log
 
@@ -684,9 +684,8 @@ pathDefaults:
 # for example "~^prefix" will match all paths that start with "prefix".
 paths:
   #cam:
-   # source: rpiCamera
-   # runOnReady: gst-launch-1.0 rtspclientsink name=s location=rtsp://localhost:$RTSP_PORT/cam_with_audio rtspsrc location=rtsp://127.0.0.1:$RTSP_PORT/$MTX_PATH latency=0 ! rtph264depay ! s. alsasrc ! queue ! audioconvert ! opusenc ! s.sink_1
+    #source: rpiCamera
+    #runOnReady: gst-launch-1.0 rtspclientsink name=s location=rtsp://localhost:$RTSP_PORT/cam_with_audio rtspsrc location=rtsp://127.0.0.1:$RTSP_PORT/$MTX_PATH latency=0 ! rtph264depay ! s. alsasrc ! queue ! audioconvert ! opusenc ! s.sink_1
   cam_with_audio:
     runOnRead: curl -X GET http://127.0.0.1:3000/api/streaming/started
     runOnUnread: curl -X GET http://127.0.0.1:3000/api/streaming/stopped
-  all_others:
