snapshot in container

--- a/apps/bird-cam-observer/docker/docker/Dockerfile
+++ b/apps/bird-cam-observer/docker/docker/Dockerfile
@@ -1,19 +1,29 @@
-FROM node:18.15.0-alpine3.17
+FROM node:lts-bookworm-slim
+
 ENV NODE_ENV=production
+
+RUN apt-get update && apt-get install -y \
+    curl \
+    gnupg2 \
+    ca-certificates
+
+RUN echo "deb http://archive.raspberrypi.org/debian/ bookworm main" > /etc/apt/sources.list.d/raspi.list \
+  && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 82B129927FA3303E
+
+RUN apt-get update && apt-get install -y libcamera-apps-lite v4l-utils
 
 WORKDIR /home
 
 COPY package*.json ./
-RUN apk add  --no-cache python3
-RUN apk add --no-cache make
-RUN apk add --no-cache g++
+RUN apt-get install -y  python3
+RUN apt-get install -y  make
+RUN apt-get install -y  g++
 RUN npm install --force
 ENV PATH /home/node_modules/.bin:$PATH
 
 WORKDIR /home/app
 
-RUN apk add --no-cache curl
-
+ENV UDEV=1
 
 CMD [ "node", "main.js" ]
 
