--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "10.0.2",
     "@nestjs/platform-express": "10.0.2",
     "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^10.3.3",
     "@ngneat/transloco": "^6.0.4",
@@ -55,6 +56,7 @@
     "rxjs": "7.8.1",
     "sharp": "^0.32.6",
     "socket.io-client": "^4.7.4",
+    "swiper": "^11.1.14",
     "tslib": "^2.5.0",
     "typeorm": "^0.3.12",
     "web-push": "^3.6.7",
