--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mysql": "^2.18.1",
     "nestjs-paginate": "^8.6.2",
     "ng2-charts": "^6.0.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "onoff": "^6.0.3",
     "pixelmatch": "^5.3.0",
@@ -97,6 +98,7 @@
     "@types/jest": "29.4.4",
     "@types/multer": "^1.4.7",
     "@types/node": "18.7.1",
+    "@types/node-schedule": "^2.1.7",
     "@typescript-eslint/eslint-plugin": "5.60.1",
     "@typescript-eslint/parser": "5.60.1",
     "autoprefixer": "^10.4.0",
